# garagem

./: .pdm.toml  db.sqlite3  pyproject.toml
Garagem/: admin.py  models.py  serializers.py  views.py
Garagem/migrations/: 0001_initial.py  0002_categoria.py  0003_alter_marca_nacionalidade.py  0004_acessório.py  0005_rename_acessório_acessorio.py  0006_cor.py  0007_alter_acessorio_options_alter_cor_options_veiculo.py  0008_remove_veiculo_cor.py  0009_alter_veiculo_options_veiculo_cor.py  0010_alter_acessorio_options_alter_veiculo_options_and_more.py  0011_veiculo_acessorio_alter_veiculo_categoria_and_more.py
Garagem/models/: acessorio.py  marca.py  veiculo.py
Garagem/serializers/: acessorio.py  veiculo.py
Garagem/view/: acessorio.py  categoria.py  cor.py  marca.py  veiculo.py
config/: settings.py  urls.py
